<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">Nmedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="menu">Menu</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="likes" translatable="false">10</string>
    <string name="shares" translatable="false">5</string>
    <string name="views" translatable="false">5</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="description_post_save">Save Button</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="description_post_edit_cancel">Cancel Edit Button</string>
    <string name="edit_message">Edit Message</string>
    <string name="edit_icon">Edit Icon</string>
</resources>