<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="edit_message" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/save" />

    <TextView
        android:id="@+id/edit_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/edit_message"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit_content"
        app:layout_constraintEnd_toStartOf="@id/edit_cancel"
        app:layout_constraintStart_toEndOf="@id/edit_ic"
        app:layout_constraintTop_toTopOf="@+id/edit_cancel" />

    <TextView
        android:id="@+id/edit_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text=""
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/bar_bottom"
        app:layout_constraintEnd_toStartOf="@id/edit_cancel"
        app:layout_constraintStart_toEndOf="@id/edit_ic"
        app:layout_constraintTop_toBottomOf="@id/edit_message" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_save"
        android:src="@drawable/ic_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/edit_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_edit_cancel"
        android:foregroundGravity="right"
        android:src="@drawable/ic_close_48"
        app:layout_constraintBottom_toTopOf="@id/bar_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_message" />

    <ImageButton
        android:id="@+id/edit_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/edit_icon"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:src="@drawable/ic_edit_48"
        app:layout_constraintBottom_toTopOf="@id/bar_bottom"
        app:layout_constraintEnd_toStartOf="@id/edit_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_message" />

    <View
        android:id="@+id/bar_edit_message"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#DDDDDD"
        app:layout_constraintTop_toTopOf="@id/edit_message" />

    <View
        android:id="@+id/bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#DDDDDD"
        app:layout_constraintTop_toTopOf="@id/content" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/edit_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="edit_ic,edit_message,edit_content,edit_cancel,bar_edit_message" />

</androidx.constraintlayout.widget.ConstraintLayout>